--- a/src/app/kanban/board/board.component.scss
+++ b/src/app/kanban/board/board.component.scss
@@ -5,7 +5,7 @@
     padding: 10px;
     background: #212121;
   }
-  
+
   .inner-card {
       margin: 5px 0;
       cursor: pointer;
@@ -14,7 +14,7 @@
   .cdk-drag-animating {
     transition: transform 300ms ease;
   }
-  
+
   .tasks.cdk-drop-list-dragging .cdk-drag {
     transition: transform 300ms ease;
   }
@@ -28,5 +28,6 @@
 .yellow { background: #ffcf44; color: black; }
 .purple { background: #b15cff; }
 .red { background: #e74a4a; }
+.olive { background: #808000; }
 
 .gray { background: gray; text-decoration: line-through; }
