--- a/src/app/kanban/dialogs/dialog.scss
+++ b/src/app/kanban/dialogs/dialog.scss
@@ -17,3 +17,4 @@ textarea { display: block; width: 100%; }
 .purple { color: #b15cff; }
 .gray { color: gray; }
 .red { color: #e74a4a; }
+.olive { color: olive}
